# bank-analytics-platform

./: .env  Makefile
.github/workflows/: ci.yml
api/: .coverage  .dockerignore  README.md  alembic.ini  coverage.xml  junit-integration.xml  junit.xml  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 05ecd6a8dde4_create_core_tables.py
api/src/bank_api/: logging.py  main.py  settings.py
api/src/bank_api/api/routes/: health.py  health_db.py  metrics.py  reports.py
api/src/bank_api/db/: migrations.py  models.py  seed.py  session.py
api/src/bank_api/observability/: metrics.py
api/src/bank_api/repos/: reports.py
api/src/bank_api/services/: report_service.py
api/tests/: test_health.py  test_health_db_integration.py  test_metrics.py  test_reports_integration.py  test_reports_unit.py
docker/api/: Dockerfile
infra/: docker-compose.yaml
infra/grafana/dashboards/: api-overview.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/prometheus/: prometheus.yml
scripts/db/: seed.sh
