[tool.poetry]
name = "bank-analytics-api"
version = "0.1.0"
description = "Bank Analytics Platform API (FastAPI + Postgres + Observability)"
authors = ["Dennis <you@example.com>"]
readme = "README.md"
packages = [{ include = "bank_api", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# Web
fastapi = "^0.115.6"
uvicorn = { version = "^0.32.1", extras = ["standard"] }

# Settings / config
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"

# Database (SQLAlchemy 2.x)
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg = { version = "^3.2.3", extras = ["binary"] }

# Observability
prometheus-client = "^0.21.1"

# Logging
structlog = "^24.4.0"

# HTTP client (para integrações futuras / testes mais realistas)
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
ruff = "^0.8.2"
mypy = "^1.13.0"
httpx = "^0.27.0"
types-python-dateutil = "^2.9.0.20241003"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]
extend-exclude = [
  "alembic/versions",
]


[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
check_untyped_defs = true
plugins = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # usamos line-length, mas não quebra build por linha
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "unit: fast tests without external dependencies",
  "integration: tests requiring docker/services (db, api)",
]
addopts = ["-q", "--disable-warnings", "--maxfail=1"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff.lint.per-file-ignores]
"src/bank_api/api/routes/*.py" = ["B008"]



